<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="VC" id="BYZ-38-t0r" customClass="ViewController" customModule="apiCalls" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RWO-NM-bnP">
                                <rect key="frame" x="0.0" y="44" width="414" height="269"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DJO-LG-hZY">
                                        <rect key="frame" x="97.5" y="109" width="40" height="30"/>
                                        <state key="normal" title="Jokes"/>
                                        <connections>
                                            <action selector="jokesPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="QHB-cd-JLU"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="maP-Qe-PKH">
                                        <rect key="frame" x="83" y="189" width="69" height="30"/>
                                        <state key="normal" title="TV Shows"/>
                                        <connections>
                                            <action selector="tvShowsPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tWk-tI-ztU"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ud1-Um-eaZ">
                                        <rect key="frame" x="288.5" y="109" width="44" height="30"/>
                                        <state key="normal" title="Drinks"/>
                                        <connections>
                                            <action selector="drinksPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="yNa-Ec-ceE"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Do-eG-7B8">
                                        <rect key="frame" x="290" y="189" width="41" height="30"/>
                                        <state key="normal" title="Music"/>
                                        <connections>
                                            <action selector="musicPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rNR-0G-RAV"/>
                                        </connections>
                                    </button>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="r2g-pl-vXX">
                                        <rect key="frame" x="0.0" y="0.0" width="83" height="269"/>
                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                    </view>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uAr-uO-00c">
                                        <rect key="frame" x="331" y="0.0" width="83" height="269"/>
                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                    </view>
                                </subviews>
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                <constraints>
                                    <constraint firstItem="uAr-uO-00c" firstAttribute="top" secondItem="RWO-NM-bnP" secondAttribute="top" id="0Ak-Tz-2kx"/>
                                    <constraint firstAttribute="bottom" secondItem="maP-Qe-PKH" secondAttribute="bottom" constant="50" id="4zI-Jo-r39"/>
                                    <constraint firstAttribute="bottom" secondItem="uAr-uO-00c" secondAttribute="bottom" id="5f4-e8-A5B"/>
                                    <constraint firstAttribute="bottom" secondItem="r2g-pl-vXX" secondAttribute="bottom" id="8hG-1s-SFv"/>
                                    <constraint firstAttribute="bottom" secondItem="9Do-eG-7B8" secondAttribute="bottom" constant="50" id="BCj-oB-geA"/>
                                    <constraint firstItem="9Do-eG-7B8" firstAttribute="top" secondItem="Ud1-Um-eaZ" secondAttribute="bottom" constant="50" id="ElL-ZN-nQU"/>
                                    <constraint firstItem="r2g-pl-vXX" firstAttribute="leading" secondItem="RWO-NM-bnP" secondAttribute="leading" id="F5Z-WJ-7g1"/>
                                    <constraint firstItem="DJO-LG-hZY" firstAttribute="centerX" secondItem="maP-Qe-PKH" secondAttribute="centerX" id="FRn-L6-9dA"/>
                                    <constraint firstItem="uAr-uO-00c" firstAttribute="width" secondItem="RWO-NM-bnP" secondAttribute="width" multiplier="0.2" id="LBy-oE-oAJ"/>
                                    <constraint firstItem="Ud1-Um-eaZ" firstAttribute="centerX" secondItem="9Do-eG-7B8" secondAttribute="centerX" id="caK-OT-LSw"/>
                                    <constraint firstItem="uAr-uO-00c" firstAttribute="leading" secondItem="9Do-eG-7B8" secondAttribute="trailing" id="fP6-O7-UEc"/>
                                    <constraint firstAttribute="trailing" secondItem="uAr-uO-00c" secondAttribute="trailing" id="flQ-ru-oqg"/>
                                    <constraint firstItem="maP-Qe-PKH" firstAttribute="top" secondItem="DJO-LG-hZY" secondAttribute="bottom" constant="50" id="go0-Zq-d7N"/>
                                    <constraint firstItem="maP-Qe-PKH" firstAttribute="leading" secondItem="r2g-pl-vXX" secondAttribute="trailing" id="jak-AV-MNO"/>
                                    <constraint firstItem="r2g-pl-vXX" firstAttribute="width" secondItem="RWO-NM-bnP" secondAttribute="width" multiplier="0.2" id="tdi-gl-hKg"/>
                                    <constraint firstItem="r2g-pl-vXX" firstAttribute="top" secondItem="RWO-NM-bnP" secondAttribute="top" id="y8f-wZ-baK"/>
                                </constraints>
                            </view>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="RYI-g5-8GS">
                                <rect key="frame" x="0.0" y="313" width="414" height="549"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="First Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qsL-Js-7Ib">
                                        <rect key="frame" x="0.0" y="0.0" width="414" height="507.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Second Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oTW-va-pxw">
                                        <rect key="frame" x="0.0" y="507.5" width="414" height="21.5"/>
                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="18"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hbx-8X-xFN">
                                        <rect key="frame" x="0.0" y="529" width="414" height="20"/>
                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="20" id="5l8-rs-NHf"/>
                                        </constraints>
                                    </view>
                                </subviews>
                            </stackView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="RWO-NM-bnP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="1FB-uD-r0D"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="RWO-NM-bnP" secondAttribute="trailing" id="5VJ-vq-vnK"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="RYI-g5-8GS" secondAttribute="bottom" id="Aj4-bp-XuN"/>
                            <constraint firstItem="RYI-g5-8GS" firstAttribute="top" secondItem="RWO-NM-bnP" secondAttribute="bottom" id="VN8-fp-QYe"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="RYI-g5-8GS" secondAttribute="trailing" id="VR7-mx-qun"/>
                            <constraint firstItem="RWO-NM-bnP" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="npf-xk-6Ev"/>
                            <constraint firstItem="RWO-NM-bnP" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.3" id="oEz-k7-Mnd"/>
                            <constraint firstItem="RYI-g5-8GS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="vUy-Ec-Dkm"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="firstLabel" destination="qsL-Js-7Ib" id="GU6-Zv-bRL"/>
                        <outlet property="secondLabel" destination="oTW-va-pxw" id="l57-cG-LcK"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-48" y="84"/>
        </scene>
    </scenes>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
